fixed alignment issues by removing removing "auto" from margin: 0 auto;

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0 auto;
+    margin: 0;
     box-sizing: border-box;
 }
 body {
@@ -70,8 +70,12 @@ main {
 }
 img {
     max-width: 100%;
+    border: 3px solid moccasin;
 }
 #bordercolorexample {
     border: 5px solid moccasin;
     padding: 10px;
+}
+section {
+    margin: 0 0 11px 0;
 }
